--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@
     }
     
     .delete{
-        width: 150px;
+        width: 130px;
         height: 50px;
         font-size: 20px;
     }
@@ -92,6 +92,7 @@
         width: 280px;
         margin-top: 50px;
         margin-bottom: 5px;
+        margin-left: 10px;
         height: 60px;
         font-size: 30px;
         border: 2px solid;
@@ -110,10 +111,7 @@
         grid-template-rows: repeat(4, 65px);
         
     }
-    
-
-    
-      .color-buttons{
+    .color-buttons{
         border-radius: 10%;
         background-color: rgb(4, 40, 118);
         color: white;
