--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body{
+    background-image: url(Fondo.jpg);
+}
 .container{
     width: 400px;
     height: 600px;
@@ -73,7 +76,7 @@
 
   @media (max-width: 360px) {
     .container{
-        width: 300px;
+        width: 320px;
         height: 540px;
     }
     
@@ -107,8 +110,8 @@
     .numbers{
         width: 200px;
         display: grid;
-        grid-template-columns: repeat(4, 65px);
-        grid-template-rows: repeat(4, 65px);
+        grid-template-columns: repeat(4, 60px);
+        grid-template-rows: repeat(4, 60px);
         
     }
     .color-buttons{
